syntax = "proto3";

package api;

// option go_package = "github.com/buffup/GolangTechTask/pkg/api";

service VotingService {
  rpc CreateVoteable(CreateVoteableRequest) returns (CreateVoteableResponse) {}
  rpc ListVoteables(ListVoteableRequest) returns (ListVoteablesResponse) {}
  rpc CastVote(CastVoteRequest) returns (CastVoteResponse) {}
}

message Voteable {
  string uuid = 1;
  string question = 2;
  repeated string answers = 3;
}

message CreateVoteableRequest {
  string question = 1;
  repeated string answers = 2;
}

message CreateVoteableResponse { string uuid = 1; }

message ListVoteableRequest {}

message ListVoteableResponse { repeated Voteable votables = 1; }

message ListVoteablesResponse {}

message CastVoteRequest {
  string uuid = 1;
  int64 answer_index = 2;
}

message CastVoteResponse {}
